recuperacion de contraseña 3 responsive

--- a/system_huellitas/views/admin/recuperacion_contra_3.html
+++ b/system_huellitas/views/admin/recuperacion_contra_3.html
@@ -22,7 +22,7 @@
                 <div class="col-6 d-flex align-items-center">
                     <img src="../../resources/img/svg/recovery_password.svg" class="img-fluid">
                 </div>
-                <div class="col-6 d-flex justify-content-center p-4">
+                <div class="col-auto d-flex justify-content-center p-4">
                     <div>
                         <!--Centramos el texto y lo ponemos en negrita-->
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
