--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -69,7 +69,7 @@
                             <th>Imagen</th>
                             <th>Nombre</th>
                             <th>Permiso</th>
-                            <th>Detalle permiso</th>
+                            <th>Permisos asignados</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
@@ -288,7 +288,7 @@
         <div class="modal-content">
             <div class="modal-header bg-orange-color">
                 <div class="container text-center text-light">
-                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Editar permisos</h1>
+                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Permisos asignados</h1>
                 </div>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                     aria-label="Close"></button>
@@ -300,12 +300,12 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-check form-switch mb-3">
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Contador</label>
                                     <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                         id="switch1" name="switch1" checked>
                                 </div>
                                 <div class="form-check form-switch mb-3">
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Administrador</label>
                                     <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                         id="switch2" name="switch2" checked>
                                 </div>
@@ -314,12 +314,12 @@
                                 <div class="form-check form-switch mb-3">
                                     <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                         id="switch3" name="switch3" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Vendedor</label>
                                 </div>
                                 <div class="form-check form-switch mb-3">
                                     <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                         id="switch4" name="switch4" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Lectura</label>
                                 </div>
                             </div>
                         </div>
