Cambios en admin

--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -68,6 +68,9 @@
                         <tr>
                             <th>Imagen</th>
                             <th>Nombre</th>
+                            <th>Apellidos</th>
+                            <th>Correo electrónico</th>
+                            <th>Fecha de registro</th>
                             <th>Permiso</th>
                             <th>Permisos asignados</th>
                             <th>Acciones</th>
@@ -81,7 +84,10 @@
                                 <img class="rounded-circle" src="../../resources/img/png/picture.png" width="70px"
                                     height="70px">
                             </td>
-                            <td>Mariana Campos</td>
+                            <td>Mariana</td>
+                            <td>Campos</td>
+                            <td>mariana@gmail.com</td>
+                            <td>24-02-14</td>
                             <td>Vendedor</td>
                             <td>
                                 <button type="button" class="btn btn-light" data-bs-toggle="modal"
@@ -102,7 +108,10 @@
                                 <img class="rounded-circle" src="../../resources/img/png/picture.png" width="70px"
                                     height="70px">
                             </td>
-                            <td>Eduardo Castro</td>
+                            <td>Eduardo</td>
+                            <td>Castro</td>
+                            <td>eduardo@gmail.com</td>
+                            <td>24-02-14</td>
                             <td>Contador</td>
                             <td>
                                 <button type="button" class="btn btn-light" data-bs-toggle="modal"
