Pantalla clientes finalizada

--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -39,7 +39,7 @@
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
-                    <form class="d-flex" role="search" id="search_productos_perros">
+                    <form class="d-flex" role="search" id="search_admin">
                         <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
                             id="search" name="search" placeholder="Buscar...">
                     </form>
