--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -317,12 +317,11 @@
                         <br>
                         <!-- Fecha de pago -->
                         <div class="col-sm-12 col-md-6">
-                            <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Fecha que se
-                                realizo el pago</label>
+                            <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Estado</label>
                             <br>
                             <!-- Fecha de pago del pedido -->
                             <label class="form-check-label" for="flexSwitchCheckChecked" id="Fecha_InformacionPedidos"
-                                name="Fecha_InformacionPedidosN">2024-03-10</label>
+                                name="Fecha_InformacionPedidosN">Completado</label>
                         </div>
                         <!-- Total a pagar -->
                         <br>
