clientes, input > dropdown

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -317,7 +317,8 @@
                         <br>
                         <!-- Fecha de pago -->
                         <div class="col-sm-12 col-md-6">
-                            <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Estado</label>
+                            <label class="form-check-label custom-bold-label"
+                                for="flexSwitchCheckChecked">Estado</label>
                             <br>
                             <!-- Fecha de pago del pedido -->
                             <label class="form-check-label" for="flexSwitchCheckChecked" id="Fecha_InformacionPedidos"
