--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -116,7 +116,6 @@
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/admin.js"></script>
-    <script src="../../controllers/admin/clientes.js"></script>
 </body>
 
 
@@ -139,8 +138,8 @@
             <div class="modal-body">
                 <form action="" id="ver_cliente">
                     <!-- Fila 1 -->
-                    <div class="container text-end text-md-start text-lg-start">
-                        <div class="row align-items-center">
+                    <div class="container text-center">
+                        <div class="row align-items-center justify-content-center">
                             <div class="col-sm-12 col-md-auto">
                                 <img class="rounded-1" id="img_admin" src="../../resources/img/png/mujeeer.png"
                                     width="120px">
@@ -162,7 +161,7 @@
                                         name="apellido_cliente" disabled>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="contra_cliente" class="form-label fw-semibold">Telefono</label>
+                                    <label for="contra_cliente" class="form-label fw-semibold">Teléfono</label>
                                     <input type="text" class="form-control" id="contra_cliente" name="correo_cliente"
                                         disabled>
                                 </div>
@@ -176,21 +175,8 @@
                                 <div class="mb-3">
                                     <label for="contra_cliente" class="form-label fw-semibold">Estado actual del
                                         cliente</label>
-                                    <!-- Dropdown para seleccionar el estado -->
-                                    <div class="dropdown" id="DropDown_ModificarPed" name="DropDown_ModificarPedN">
-                                        <br>
-                                        <button class="btn bg-gray-color dropdown-toggle form-control" type="button"
-                                            id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            <span id="estadoSeleccionado1">Activo</span>
-                                        </button>
-
-                                        <!-- Opciones del dropdown -->
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <a class="dropdown-item" href="#" id="Activoooption"> Activo</a>
-                                            <a class="dropdown-item" href="#" id="Pendienteeoption"> Inactivo</a>
-                                        </div>
-                                    </div>
+                                    <input type="text" class="form-control" id="estado_cliente" name="estado_cliente"
+                                        disabled>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
