--- a/system_huellitas/resources/css/static_components/menu_public.css
+++ b/system_huellitas/resources/css/static_components/menu_public.css
@@ -1,7 +1,17 @@
-.form-control {
+.search {
     border: 2px solid rgba(0, 0, 0, 0.312);
 }
 
 .search-icon {
     left: 15px;
+ }
+
+ /* //Cambia el estilo de los botones y los input */
+ .btn {
+    background-image: none;
+ }
+
+ input{
+    border-color: none ;
+    border: none;
  }
