--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -44,6 +44,7 @@
   --bs-yellow-color: rgb(244, 211, 94);
   --bs-gray-color: rgb(246, 243, 243);
   --bs-beige-color: rgb(254, 246, 240);
+  --bs-brown-color: rgb(72, 47, 36);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -58,6 +59,7 @@
   --bs-yellow-color-rgb: 244, 211, 94;
   --bs-gray-color-rgb: 246, 243, 243;
   --bs-beige-color-rgb: 254, 246, 240;
+  --bs-brown-color-rgb: 72, 47, 36;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -3266,6 +3268,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(254, 246, 240);
 }
 
+.btn-brown-color {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(72, 47, 36);
+  --bs-btn-border-color: rgb(72, 47, 36);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #3d281f;
+  --bs-btn-hover-border-color: #3a261d;
+  --bs-btn-focus-shadow-rgb: 99, 78, 69;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #3a261d;
+  --bs-btn-active-border-color: #36231b;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(72, 47, 36);
+  --bs-btn-disabled-border-color: rgb(72, 47, 36);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3501,6 +3520,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(254, 246, 240);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(254, 246, 240);
+  --bs-gradient: none;
+}
+
+.btn-outline-brown-color {
+  --bs-btn-color: rgb(72, 47, 36);
+  --bs-btn-border-color: rgb(72, 47, 36);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(72, 47, 36);
+  --bs-btn-hover-border-color: rgb(72, 47, 36);
+  --bs-btn-focus-shadow-rgb: 72, 47, 36;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(72, 47, 36);
+  --bs-btn-active-border-color: rgb(72, 47, 36);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(72, 47, 36);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(72, 47, 36);
   --bs-gradient: none;
 }
 
@@ -5181,6 +5217,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-beige-color-text-emphasis);
 }
 
+.alert-brown-color {
+  --bs-alert-color: var(--bs-brown-color-text-emphasis);
+  --bs-alert-bg: var(--bs-brown-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-brown-color-border-subtle);
+  --bs-alert-link-color: var(--bs-brown-color-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5662,6 +5705,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-beige-color-bg-subtle);
   --bs-list-group-active-bg: var(--bs-beige-color-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-beige-color-text-emphasis);
+}
+
+.list-group-item-brown-color {
+  --bs-list-group-color: var(--bs-brown-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-brown-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-brown-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-brown-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-brown-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-brown-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-brown-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-brown-color-text-emphasis);
 }
 
 .btn-close {
@@ -7232,6 +7288,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-beige-color-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-brown-color {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-brown-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -7356,6 +7417,15 @@ textarea.form-control-lg {
 .link-beige-color:hover, .link-beige-color:focus {
   color: RGBA(254, 248, 243, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(254, 248, 243, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-brown-color {
+  color: RGBA(var(--bs-brown-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-brown-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-brown-color:hover, .link-brown-color:focus {
+  color: RGBA(58, 38, 29, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(58, 38, 29, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7818,6 +7888,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-beige-color-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-brown-color {
+  --bs-focus-ring-color: rgba(var(--bs-brown-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -8006,6 +8080,11 @@ textarea.form-control-lg {
 .border-beige-color {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-beige-color-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-brown-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-brown-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -8995,6 +9074,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-beige-color-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-brown-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-brown-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -9227,6 +9311,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-beige-color-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-brown-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-brown-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9348,6 +9437,11 @@ textarea.form-control-lg {
 .bg-beige-color {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-beige-color-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-brown-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-brown-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
