Pantalla de actualizacion de contrasenia terminada

--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -40,40 +40,40 @@
                             <div class="mb-3">
                                 <label for="nombre_cliente" class="form-label fw-bold">Nombre</label>
                                 <input type="text" id="nombre_cliente" name="nonmbreCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="dui_cliente" class="form-label fw-bold">Dui</label>
                                 <input type="number" id="dui_cliente" name="duiCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="fecha_nacimiento_cliente" class="form-label fw-bold">Fecha de
                                     nacimiento</label>
                                 <input type="date" id="fecha_nacimiento_cliente" name="fechaNacimientoCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="direccion_cliente" class="form-label fw-bold">Dirección</label>
                                 <input type="text" id="direccion_cliente" name="direccionCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
                             <div class="mb-3">
                                 <label for="apellido_cliente" class="form-label fw-bold">Apellidos</label>
                                 <input type="text" id="apellido_cliente" name="apellidoCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="email_cliente" class="form-label fw-bold">Correo electrónico</label>
                                 <input type="email" id="email_cliente" name="emailCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="contrasenia_cliente" class="form-label fw-bold">Contraseña</label>
                                 <input type="password" id="cpntrasenia_cliente" name="contraseniaCliente"
-                                    class="form-control shadow  rounded-3">
+                                    class="form-control shadow  rounded-3 bg-white">
                             </div>
                         </div>
                         <div class="text-center mt-4">
