Pantalla de contactanos terminada

--- a/system_huellitas/resources/css/public/actualizar_contra.css
+++ b/system_huellitas/resources/css/public/actualizar_contra.css
@@ -3,7 +3,7 @@ body{
     background-position: right center;
     background-repeat: no-repeat;
     background-size: contain;
-    background-size: 45% 150vh;
+    background-attachment: fixed;
 }
 
 @media (max-width: 600px) {
