--- a/system_huellitas/views/public/actualizar_contra.html
+++ b/system_huellitas/views/public/actualizar_contra.html
@@ -28,14 +28,14 @@
                 <form action="" id="recuperacion_contrasenia" class="mt-5 p-4">
                     <div class="mb-5">
                         <label for="contrasenia_actual" class="form-label fw-semibold">Contraseña actual</label>
-                        <input type="password" id="contrasenia_actual" name="contraseniaActual" class="form-control form-control-lg shadow rounded-3 bg-white">
+                        <input type="password" id="contrasenia_actual" name="contraseniaActual" class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="mb-5">
                         <label for="contrasenia_nueva" class="form-label fw-semibold">Nueva contraseña</label>
-                        <input type="password" id="contrasenia_nueva" name="contraseniaActual" class="form-control form-control-lg shadow rounded-3 bg-white">
+                        <input type="password" id="contrasenia_nueva" name="contraseniaActual" class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto" href="">Actualizar</a>
+                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4" href="">Actualizar</a>
                         <p class="fw-semibold">Guarda tu contraseña en algun lugar seguro</p>
                     </div>
                 </form>
@@ -43,6 +43,7 @@
         </div>
     </main>
 
+     <!-- Agregamos nuestro footer a la pantalla -->
     <footer id="footer"></footer>
 
      <!-- Agregamos el framework de boostrap - js -->
