--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -15,9 +15,9 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
 </head>
 
-<body class="bg-beige-color p-5 mt-5">
+<body class="bg-beige-color">
 
-    <header>
+    <header class="p-5 mt-5">
         <nav id="navbar"></nav>
         <div class="container">
             <div class="row mt-4 d-flex align-items-center">
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <main class="mt-5">
+    <main>
         <div class="container mb-3">
             <h5>Mis productos</h5>
         </div>
@@ -103,13 +103,11 @@
                             <p class="fw-bold fs-5">Subtotal</p>
                             <p class="fw-bold fs-5">$100.00</p>
                         </div>
-                        <a href="" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light btn-lg rounded-4"
-                            data-bs-toggle="modal" data-bs-target="#advertencia">Ir
-                            a pagar</a>
+                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light btn-lg rounded-4">Ir a pagar</a>
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-start mt-4">
+            <div class="d-flex justify-content-start mt-4 mb-5">
                 <a href=""><img src="../../resources/img/png/row.png"></a>
                 <p class="ms-3 mt-1">Seguir comprando</p>
             </div>
@@ -124,12 +122,14 @@
                     </div>
                     <div class="modal-body p-4">
                         <p class="fw-semibold">Antes de  pagar es necesario que inicies sesión o crees una cuenta</p>
-                        <a href="" class="btn btn-orange-color text-light">Iniciar sesión</a>
+                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color text-light">Iniciar sesión</a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <footer id="footer"></footer>
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
