--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -38,6 +38,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-orange-cream-color: rgb(255, 191, 105);
   --bs-orange-color: rgb(238, 150, 75);
   --bs-skin-color: rgb(250, 240, 202);
   --bs-red-color: rgb(249, 87, 56);
@@ -53,6 +54,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
+  --bs-orange-cream-color-rgb: 255, 191, 105;
   --bs-orange-color-rgb: 238, 150, 75;
   --bs-skin-color-rgb: 250, 240, 202;
   --bs-red-color-rgb: 249, 87, 56;
@@ -3166,6 +3168,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-orange-cream-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(255, 191, 105);
+  --bs-btn-border-color: rgb(255, 191, 105);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #ffc980;
+  --bs-btn-hover-border-color: #ffc578;
+  --bs-btn-focus-shadow-rgb: 217, 162, 89;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ffcc87;
+  --bs-btn-active-border-color: #ffc578;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(255, 191, 105);
+  --bs-btn-disabled-border-color: rgb(255, 191, 105);
+}
+
 .btn-orange-color {
   --bs-btn-color: #000;
   --bs-btn-bg: rgb(238, 150, 75);
@@ -3418,6 +3437,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-orange-cream-color {
+  --bs-btn-color: rgb(255, 191, 105);
+  --bs-btn-border-color: rgb(255, 191, 105);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(255, 191, 105);
+  --bs-btn-hover-border-color: rgb(255, 191, 105);
+  --bs-btn-focus-shadow-rgb: 255, 191, 105;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(255, 191, 105);
+  --bs-btn-active-border-color: rgb(255, 191, 105);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(255, 191, 105);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(255, 191, 105);
   --bs-gradient: none;
 }
 
@@ -5175,6 +5211,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-dark-text-emphasis);
 }
 
+.alert-orange-cream-color {
+  --bs-alert-color: var(--bs-orange-cream-color-text-emphasis);
+  --bs-alert-bg: var(--bs-orange-cream-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-orange-cream-color-border-subtle);
+  --bs-alert-link-color: var(--bs-orange-cream-color-text-emphasis);
+}
+
 .alert-orange-color {
   --bs-alert-color: var(--bs-orange-color-text-emphasis);
   --bs-alert-bg: var(--bs-orange-color-bg-subtle);
@@ -5627,6 +5670,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-dark-bg-subtle);
   --bs-list-group-active-bg: var(--bs-dark-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-dark-text-emphasis);
+}
+
+.list-group-item-orange-cream-color {
+  --bs-list-group-color: var(--bs-orange-cream-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-orange-cream-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-orange-cream-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-orange-cream-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-orange-cream-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-orange-cream-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-orange-cream-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-orange-cream-color-text-emphasis);
 }
 
 .list-group-item-orange-color {
@@ -7258,6 +7314,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-dark-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-orange-cream-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-orange-cream-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-orange-color {
   color: #000 !important;
   background-color: RGBA(var(--bs-orange-color-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -7363,6 +7424,15 @@ textarea.form-control-lg {
 .link-dark:hover, .link-dark:focus {
   color: RGBA(26, 30, 33, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(26, 30, 33, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-orange-cream-color {
+  color: RGBA(var(--bs-orange-cream-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-orange-cream-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-orange-cream-color:hover, .link-orange-cream-color:focus {
+  color: RGBA(255, 204, 135, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(255, 204, 135, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-orange-color {
@@ -7864,6 +7934,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-dark-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-orange-cream-color {
+  --bs-focus-ring-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-orange-color {
   --bs-focus-ring-color: rgba(var(--bs-orange-color-rgb), var(--bs-focus-ring-opacity));
 }
@@ -8050,6 +8124,11 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-orange-cream-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-orange-color {
@@ -9044,6 +9123,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-orange-cream-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-orange-color {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-orange-color-rgb), var(--bs-text-opacity)) !important;
@@ -9281,6 +9365,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-dark-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-orange-cream-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-orange-color {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-orange-color-rgb), var(--bs-link-underline-opacity)) !important;
@@ -9407,6 +9496,11 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-orange-cream-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-orange-color {
