--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -103,7 +103,7 @@
                             <p class="fw-bold fs-5">Subtotal</p>
                             <p class="fw-bold fs-5">$100.00</p>
                         </div>
-                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light btn-lg rounded-4">Ir a pagar</a>
+                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4">Ir a pagar</a>
                     </div>
                 </div>
             </div>
