--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -46,6 +46,7 @@
   --bs-gray-color: rgb(246, 243, 243);
   --bs-beige-color: rgb(254, 246, 240);
   --bs-brown-color: rgb(72, 47, 36);
+  --bs-green-color: rgb(173, 240, 141);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -62,6 +63,7 @@
   --bs-gray-color-rgb: 246, 243, 243;
   --bs-beige-color-rgb: 254, 246, 240;
   --bs-brown-color-rgb: 72, 47, 36;
+  --bs-green-color-rgb: 173, 240, 141;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -3304,6 +3306,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(72, 47, 36);
 }
 
+.btn-green-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(173, 240, 141);
+  --bs-btn-border-color: rgb(173, 240, 141);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #b9f29e;
+  --bs-btn-hover-border-color: #b5f298;
+  --bs-btn-focus-shadow-rgb: 147, 204, 120;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #bdf3a4;
+  --bs-btn-active-border-color: #b5f298;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(173, 240, 141);
+  --bs-btn-disabled-border-color: rgb(173, 240, 141);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3573,6 +3592,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(72, 47, 36);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(72, 47, 36);
+  --bs-gradient: none;
+}
+
+.btn-outline-green-color {
+  --bs-btn-color: rgb(173, 240, 141);
+  --bs-btn-border-color: rgb(173, 240, 141);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(173, 240, 141);
+  --bs-btn-hover-border-color: rgb(173, 240, 141);
+  --bs-btn-focus-shadow-rgb: 173, 240, 141;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(173, 240, 141);
+  --bs-btn-active-border-color: rgb(173, 240, 141);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(173, 240, 141);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(173, 240, 141);
   --bs-gradient: none;
 }
 
@@ -5267,6 +5303,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-brown-color-text-emphasis);
 }
 
+.alert-green-color {
+  --bs-alert-color: var(--bs-green-color-text-emphasis);
+  --bs-alert-bg: var(--bs-green-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-green-color-border-subtle);
+  --bs-alert-link-color: var(--bs-green-color-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5774,6 +5817,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-brown-color-bg-subtle);
   --bs-list-group-active-bg: var(--bs-brown-color-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-brown-color-text-emphasis);
+}
+
+.list-group-item-green-color {
+  --bs-list-group-color: var(--bs-green-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-green-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-green-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-green-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-green-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-green-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-green-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-green-color-text-emphasis);
 }
 
 .btn-close {
@@ -7354,6 +7410,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-brown-color-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-green-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-green-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -7496,6 +7557,15 @@ textarea.form-control-lg {
 .link-brown-color:hover, .link-brown-color:focus {
   color: RGBA(58, 38, 29, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(58, 38, 29, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-green-color {
+  color: RGBA(var(--bs-green-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-green-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-green-color:hover, .link-green-color:focus {
+  color: RGBA(189, 243, 164, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(189, 243, 164, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7966,6 +8036,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-brown-color-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-green-color {
+  --bs-focus-ring-color: rgba(var(--bs-green-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -8164,6 +8238,11 @@ textarea.form-control-lg {
 .border-brown-color {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-brown-color-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-green-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-green-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -9163,6 +9242,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-brown-color-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-green-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-green-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -9405,6 +9489,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-brown-color-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-green-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-green-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9536,6 +9625,11 @@ textarea.form-control-lg {
 .bg-brown-color {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-brown-color-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-green-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-green-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
