--- a/system_huellitas/views/public/recuperacion_contra_1.html
+++ b/system_huellitas/views/public/recuperacion_contra_1.html
@@ -4,54 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Huellitas pets - recuperación de contraseña</title>
+    <title>Huellitas pets - actualizar contraseña</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-    <!-- Hoja de estilos css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/index.css">
+    <!-- Agregamos su archivo css -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/public/recuperar_contra.css">
+    <!-- Agregamos el archivo css del menu -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
 </head>
 
 <body>
-    <main>
-        <div class="container-fluid d-flex align-items-center">
-            <!--Se pone la imagen que acompañará el formulario-->
-            <div class="col-lg-6 d-none d-lg-block">
-                <!-- Esto hace que la imagen solo se muestre en pantallas grandes -->
-                <img src="../../resources/img/svg/perritolindo.svg" class="img-fluid perritolindo" alt="Imagen de un perrito lindo">
-            </div>
-            <!-- Div para el texto y el formulario -->
-            <div class="col-lg-6 d-flex justify-content-center p-4">
-                <div>
-                    <!--Centramos el texto y lo ponemos en negrita-->
-                    <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
-                    <!--Ponemos el texto en menor tamaño y centrado respecto a su columna-->
-                    <p class="fw-normal text-center">Ingresa tu correo electrónico asociado a tu cuenta.</p>
-                    <div class="container p-5 ">
-                        <!--Le damos nombre con id y name al form para luego utilizarlo en el backend-->
-                        <form action="" id="recuperacion_contra_1" name="recuperacioncontra1">
-                            <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
-                            <div>
-                                <label for="email_recuperacion" class="form-label">Correo electrónico</label>
-                                <input type="email"
-                                    class="form-control form-control-lg bg-white p-2 shadow rounded-3"
-                                    id="email_recuperacion" name="emailRecuperacion">
-                            </div>
-                            <!--En este div se encuentra el boton de enviar código, la página adonde redirecciona y el texto que esta debajo del botón-->
-                            <div class="d-grid gap-2 mt-5">
-                                <a class="btn btn-orange-color text-light p-2 rounded-3"
-                                    href="">Enviar código</a>
-                                <div class="fw-semibold text-decoration-none text-dark text-center form-text">
-                                    Recuerda revisar tu bandeja de correos para ver el código que debes ingresar
-                                </div>
-                            </div>
-                        </form>
+    <header>
+        <nav id="navbar"></nav>
+    </header>
+
+    <main class="mt-5 p-5">
+        <div class="container mt-5">
+            <div class="row justify-content-md-end">
+                <div class="col-12 col-md-6 text-center">
+                    <div>
+                        <h2 class="fw-semibold">Recuperar Contraseña</h2>
+                        <p class="fw-normal fs-5">Ingresar tu correo eléctronico asociado a tu cuenta.</p>
                     </div>
+                    <form action="" id="recuperacion_contrasenia" class="mt-5 p-4">
+                        <div class="mb-5">
+                            <label for="contrasenia_nueva" class="form-label fw-semibold">Correo</label>
+                            <input type="email" id="contrasenia_nueva" name="contraseniaActual"
+                                class="form-control form-control-lg shadow rounded-4 bg-white">
+                        </div>
+                        <br>
+                        <div class="text-center">
+                            <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4"
+                                href="../../views/public/recuperacion_contra2.html">Enviar código</a>
+                            <p class="fw-semibold">Recuerda revisar tu bandeja de correos para ver el código que
+                                debes ingresar.</p>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </main>
+
+    <!-- Agregamos nuestro footer a la pantalla -->
+    <footer id="footer"></footer>
+
+    <!-- Agregamos el framework de boostrap - js -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la ruta para agregar el menu -->
+    <script src="../../controllers/utils/public.js"></script>
 </body>
 
 </html>
